--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <header class="mx-0 md:mx-8">
-      <!-- navbar section -->
+      <!-- navbar section adding -->
       <nav
         class="navbar flex justify-between items-center px-4 md:px-[68px] py-[10px]"
       >
@@ -118,7 +118,57 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <!-- Services section -->
+      <section class="px-7">
+        <div class="text-center">
+          <h3 class="text-[#19d3ae] text-xl font-bold mb-2">OUR SERVICES</h3>
+          <h2 class="text-[#3a4256] text-4xl">Services We Probide</h2>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 py-20">
+          <div
+            class="flex justify-center items-center flex-col rounded-[18px] px-14 py-[38px] shadow-xl"
+          >
+            <img class="mb-8" src="img/filling.png" alt="" />
+            <div class="text-center">
+              <h3 class="text-xl font-semibold mb-2 mt-8">Cavity Filling</h3>
+              <p>
+                Lorem Ipsum is simply dummy printing and typesetting indust
+                Ipsum has been the
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="flex justify-center items-center flex-col rounded-[18px] px-14 py-[38px] shadow-xl"
+          >
+            <img class="mb-8" src="img/teeth.png" alt="" />
+            <div class="text-center">
+              <h3 class="text-xl font-semibold mb-2 mt-8">Teeth Whitening</h3>
+              <p>
+                Lorem Ipsum is simply dummy printing and typesetting indust
+                Ipsum has been the
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="flex justify-center items-center flex-col rounded-[18px] px-14 py-[38px] shadow-xl"
+          >
+            <img class="mb-8" src="img/treatment.png" alt="" />
+            <div class="text-center">
+              <h3 class="text-xl font-semibold mb-2 mt-8">
+                Fluoride Treatment
+              </h3>
+              <p>
+                Lorem Ipsum is simply dummy printing and typesetting indust
+                Ipsum has been the
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
